Correccion errores FR . com

--- a/fr/information-beton-cire.html
+++ b/fr/information-beton-cire.html
@@ -312,7 +312,7 @@ size:30px; font-weight:100" onclick="mostrarmovil()"><img src="../imagenes/icono
 								différentes finitions de vernis (mate, satinée ou brillante) ou aux peintures et glacis
 								aux effets métalliques. Son application de manière artisanale fait que le résultat de
 								chaque travail soit encore plus unique et exclusif… Sans égal, car vous ne trouverez pas
-								deux surfaces pareilles.</p>
+								deux surfaces identiques.</p>
 
 							<img class="img-fluid" src="../imagenes/Topciment_Microcemento_que_es_03.jpg"
 								alt="microcementos">
