--- a/fr/systemes/atlanttic-beton-cire-pour-piscines.html
+++ b/fr/systemes/atlanttic-beton-cire-pour-piscines.html
@@ -425,7 +425,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong> Compressive strength</strong>
+                                    <strong> Résistance à la compression</strong>
                                     <p>55 N/m² (28 jours)
                                 </div>
                             </div>
