--- a/fr/systemes/unlimitted.html
+++ b/fr/systemes/unlimitted.html
@@ -621,7 +621,7 @@
                     <!-- Presentación -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Présentation</p>
-                    <p>Unlimitted Microdeck est présnté en seau coniques en plastique noir de 20 kg.
+                    <p>Unlimitted Microdeck est présenté en seau coniques en plastique noir de 20 kg.
                     </p>
                 </div>
         </section>
