--- a/fr/entreprise.html
+++ b/fr/entreprise.html
@@ -441,7 +441,7 @@
                                 <div class="col-md-6">
                                     <div class="text-center mb-3">
                                         <img src="../imagenes/us/Pictogramas_Logistica.png" class="img-fluid "><br>
-                                        <h2>Logistics</h2>
+                                        <h2>Logistique</h2>
                                     </div>
 
                                     <p>
@@ -488,7 +488,7 @@
                             <h2 class="mt-3 mb-3"
                                 data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'><span
                                     style=" padding:5px;">Concernant la fabrication de mortiers techniques et
-                                    microcements</span></h2>
+                                    microciments</span></h2>
                             <div class="row">
                                 <div class="col-md-12">
                                     <p>
@@ -599,19 +599,27 @@
                 <div class="col-md-3 col2F">
                     <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
                     <ul class="ulF proyectos">
-                        <li class="suelosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#suelos">Rénovation de
+                        <li class="suelosF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#suelos">Rénovation de
                                 sols </a></li>
-                        <li class="paredesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#paredes">Revêtements de
+                        <li class="paredesF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#paredes">Revêtements de
                                 murs</a></li>
-                        <li class="banyoF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#banyo">Rénovation de
+                        <li class="banyoF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#banyo">Rénovation de
                                 salle de bains </a></li>
-                        <li class="cocinasF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#cocinas">Rénovation de
+                        <li class="cocinasF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#cocinas">Rénovation de
                                 cuisine</a></li>
-                        <li class="decontiuosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#decontinuos">Revêtements décoratives
+                        <li class="decontiuosF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#decontinuos">Revêtements
+                                décoratives
                                 continues</a></li>
-                        <li class="mueblesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#muebles">Décoration de
+                        <li class="mueblesF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#muebles">Décoration de
                                 meubles</a></li>
-                        <li class="azulejosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#azulejos">Recouvrir
+                        <li class="azulejosF"><a class="linkB"
+                                href="photos-du-revetement-decoratif-beton-cire.html#azulejos">Recouvrir
                                 carrelage </a></li>
                     </ul>
                 </div>
