--- a/fr/systemes/sttandard-beton-cire-bicomposant.html
+++ b/fr/systemes/sttandard-beton-cire-bicomposant.html
@@ -1283,7 +1283,7 @@
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
                     <h2 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-                        Colours</h2>
+                        Couleurs</h2>
                     <div class="rowColor">
                         <section id="responsive-images-columns">
                             <div class="containerSttand">
