--- a/fr/contact.html
+++ b/fr/contact.html
@@ -365,7 +365,7 @@
 
                         <div class="contenedorMenuOculto">
                             <div class="contenedorMagenDerecha">
-                                <div id="mitadTextoIzquierda" data-animate-scroll='{"x": "-100",
+                                <div id="mitadTextoIzquierda" style="opacity: inherit;" data-animate-scroll='{"x": "-100",
                     "y": "0",
                     "alpha": "0",
                     "duration": "1"}'>
