--- a/fr/index.html
+++ b/fr/index.html
@@ -545,7 +545,7 @@
 							une large portée internationale.
 						</h2>
 						<h2 class="txHome2 ">
-							Our experience and innovation sets us apart from any microcement or coating on the market.
+							Notre expérience et innovation nous différencient de tout les bétons cirés du marché
 						</h2>
 
 					</div>
