--- a/fr/systemes/sttandard-beton-cire-bicomposant.html
+++ b/fr/systemes/sttandard-beton-cire-bicomposant.html
@@ -225,7 +225,7 @@
                     <li><a href="#sttandard-microstone">Sttandard Microstone</a></li>
                     <li><a href="#sttandard-acricem">Sttandard Acricem</a></li>
                     <li><a href="#aplicacion">Application</a></li>
-                    <li> <a href="#colores">Colours</a></li>
+                    <li> <a href="#colores">Couleurs</a></li>
                 </ul>
             </div>
         </div>
