--- a/noticias.html
+++ b/noticias.html
@@ -371,6 +371,68 @@
                     <div class="row">
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
+                                <h2 class="card-header"> <a
+                                        href="noticias-microcemento/8-motivos-microcemento-futuro-reformas.html">8
+                                        motivos por los que el microcemento es el futuro de las reformas</a> <span
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>30/09/2020</span>
+                                </h2>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3"
+                                                        src="imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (5) - copia.jpg"
+                                                        height="auto" />
+                                                    <p>El microcemento es el revestimiento decorativo del presente, pero
+                                                        sobre todo del futuro, ya que sus múltiples ventajas frente a
+                                                        otros materiales lo convierten en idóneo para la creación de
+                                                        todo tipo de espacios y estilos. A continuación te explicamos
+                                                        los principales beneficios del microcemento que te enamorarán y
+                                                        con la que lograrás la casa de tus sueños. <br>
+                                                    </p>
+                                                    <a href="noticias-microcemento/8-motivos-microcemento-futuro-reformas.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Leer
+                                                        más</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
+                                <h2 class="card-header"> <a
+                                        href="noticias-microcemento/piscinas-de-microcemento-la-mejor-opcion-posible.html">Piscinas
+                                        de microcemento, la mejor opción posible</a> <span class="float-right clocki"><i
+                                            class="fa fa-clock-o mr-2  "></i>20/09/2020</span>
+                                </h2>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3" src="imagenes/news/portada.jpg"
+                                                        height="auto" />
+                                                    <p>Es tiempo de sol, aire libre y de disfrutar del verano. Pero,
+                                                        sobre todo, es tiempo de tener una piscina de microcemento para
+                                                        contar la mejor calidad y el mejor estilo. <br>
+                                                    </p>
+                                                    <a href="noticias-microcemento/piscinas-de-microcemento-la-mejor-opcion-posible.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Leer
+                                                        más</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a href="noticias-microcemento/carmen-house.html">La casa más
                                         famosa en redes sociales está diseñada con Topciment</a> <span
                                         class="float-right clocki"><i class="fa fa-clock-o mr-2  "></i>26/08/2020</span>
