--- a/it - copia/sistemi.html
+++ b/it - copia/sistemi.html
@@ -677,68 +677,63 @@
     <div class="contenedorMenuOculto contenedorF">
       <div class="row row1">
         <div class="col-md-3 col1F">
-          <h6 class="tituloF productosF"><strong>PRODOTTI</strong></h6>
+          <h6 class="tituloF productosF"><strong>PRODUCTS</strong></h6>
           <ul class="ulF productosF">
-            <li class="sttandardF"><a class="linkB" href="sistemi/sttandard-microcemento-bicomponente.html">Microcemento
-                bicomponente</a></li>
+            <li class="sttandardF"><a class="linkB"
+                href="systems/sttandard-two-component-microcement.html">Two-component microcement</a></li>
             <li class="evoluttionF"><a class="linkB"
-                href="sistemi/evoluttion-microcemento-monocomponente.html">Microcemento monocomponente
-              </a></li>
-            <li class="efecF"><a class="linkB" href="sistemi/efectto-microcemento-pronto-all-uso.html">Microcemento
-                pronto all'uso</a></li>
-            <li class="puremF"><a class="linkB" href="sistemi/pure-mettal-rivestimento-metallico.html"> Rivestimento
-                metallico </a></li>
-            <li class="classicF"><a class="linkB" href="sistemi/classic-mettal-vernici-metallizzate.html">Vernici
-                metallizzate</a>
+                href="systems/evoluttion-one-component-microcement.html">One-component microcement</a></li>
+            <li class="efecF"><a class="linkB" href="systems/efectto-ready-to-use-microcement.html">Ready to use
+                microcement</a></li>
+            <li class="puremF"><a class="linkB" href="systems/pure-mettal-metallic-microcement.html">Metallic
+                microcement</a></li>
+            <li class="classicF"><a class="linkB" href="systems/classic-mettal-metallic-paints.html">Metallic paints</a>
             </li>
-            <li class="elitteF"><a class="linkB" href="sistemi/elitte-velature-e-pigmenti-metalizzati.html">Velature e
-                pigmenti metalizzati</a></li>
-            <li class="primacemF"><a class="linkB" href="sistemi/primacem-primers.html">Primers</a></li>
-            <li class="arcocemF"><a class="linkB" href="sistemi/arcocem-pigmenti.html">Pigmenti</a></li>
-            <li class="topsealerF"><a class="linkB" href="sistemi/topsealer-vernici.html">Vernici</a></li>
-            <li class="limpieF"><a class="linkB" href="sistemi/pulizia-e-cura-del-microcemento.html">Pulizia e cura del
-                microcemento</a></li>
-            <li class="herramF"><a class="linkB" href="sistemi/attrezzi.html">Attrezzi</a></li>
+            <li class="elitteF"><a class="linkB" href="systems/elitte-glazes-and-metallic-pigments.html">Glazes and
+                metallic pigments</a></li>
+            <li class="primacemF"><a class="linkB" href="systems/primacem-primers.html">Primers</a></li>
+            <li class="arcocemF"><a class="linkB" href="systems/arcocem-pigments.html">Pigments</a></li>
+            <li class="topsealerF"><a class="linkB" href="systems/topsealer-varnishes.html">Varnishes</a></li>
+            <li class="limpieF"><a class="linkB" href="systems/cleaning-and-care-of-microcement.html">Cleaning and care
+                of microcement</a></li>
+            <li class="herramF"><a class="linkB" href="systems/tools.html">Tools</a></li>
           </ul>
         </div>
         <div class="col-md-3 col2F">
-          <h6 class="tituloF proyectosF"><strong>PROGETTI</strong></h6>
+          <h6 class="tituloF proyectosF"><strong>PROJECTS</strong></h6>
           <ul class="ulF proyectos">
-            <li class="suelosF"><a class="linkB" href="galleria.html#suelos">Rinnovamento del pavimento</a></li>
-            <li class="paredesF"><a class="linkB" href="galleria.html#paredes">Rivestimento pareti</a></li>
-            <li class="banyoF"><a class="linkB" href="galleria.html#banyo">Ristrutturazione dei bagni</a></li>
-            <li class="cocinasF"><a class="linkB" href="galleria.html#cocinas">Ristrutturazione di cucine</a></li>
-            <li class="decontiuosF"><a class="linkB" href="galleria.html#decontinuos">Rivestimenti decorativi
-                continui</a>
+            <li class="suelosF"><a class="linkB" href="gallery.html#suelos">Floor Renovation</a></li>
+            <li class="paredesF"><a class="linkB" href="gallery.html#paredes">Wall coating</a></li>
+            <li class="banyoF"><a class="linkB" href="gallery.html#banyo">Bathroom remodelling</a></li>
+            <li class="cocinasF"><a class="linkB" href="gallery.html#cocinas">Kitchen remodelling</a></li>
+            <li class="decontiuosF"><a class="linkB" href="gallery.html#decontinuos">Continuous decorative coatings</a>
             </li>
-            <li class="mueblesF"><a class="linkB" href="galleria.html#muebles">Arredo di mobili</a></li>
-            <li class="azulejosF"><a class="linkB" href="galleria.html#azulejos">Coprire piastrelle</a></li>
-            <li class="metalicosF"><a class="linkB" href="galleria.html#metalicos">Effetti metallizzati</a></li>
+            <li class="mueblesF"><a class="linkB" href="gallery.html#muebles">Furniture decoration</a></li>
+            <li class="azulejosF"><a class="linkB" href="gallery.html#azulejos">Covering tiles</a></li>
+            <li class="metalicosF"><a class="linkB" href="gallery.html#metalicos">Metallic effects</a></li>
           </ul>
         </div>
         <div class="col-md-3 col3F">
-          <h6 class="tituloF"><strong>PROFESSIONALI</strong></h6>
+          <h6 class="tituloF"><strong>PROFESSIONALS</strong></h6>
           <ul class="ulF profesionalesF">
             <li class="clientesF"><a class="linkB" href="portalcliente">Customer portal</a></li>
-            <li class="distriF"><a class="linkB" href="distributori.html">Distributori</a></li>
-            <li class="garantF"><a class="linkB" href="garanzia.html">Garanzia</a></li>
-            <li class="fichatF"><a class="linkB" href="downloads.html#fichas-tecnicas-topciment">Schede tecniche</a>
-            </li>
+            <li class="distriF"><a class="linkB" href="dealers.html">Dealers</a></li>
+            <li class="garantF"><a class="linkB" href="guarantee.html">Warranty</a></li>
+            <li class="fichatF"><a class="linkB" href="downloads.html#fichas-tecnicas-topciment">Data sheets</a></li>
             <li class="descargasF"><a class="linkB" href="downloads.html#catalogo-topciment">Downloads</a></li>
             <li class="videotutF"><a class="linkB" href="video-tutorials-microcement.html">Video tutorials</a></li>
-            <li class="calcF"><a class="linkB" href="../calc/index.html">Calcolatrice</a></li>
-            <li class="selloF"><a class="linkB" href="quality-seal.html">Etichetta di qualità</a></li>
+            <li class="calcF"><a class="linkB" href="../calc/index.html">Calculator</a></li>
+            <li class="selloF"><a class="linkB" href="quality-seal.html">Quality Seal</a></li>
           </ul>
         </div>
         <div class="col-md-3 col4F">
-          <h6 class="tituloF"><strong>L'AZIENDA</strong></h6>
+          <h6 class="tituloF"><strong>COMPANY</strong></h6>
           <ul class="ulF empresaF">
-            <li class="nosotrosF"><a class="linkB" href="chi-siamo.html">Chi siamo</a></li>
-            <li class="noticiasF"><a class="linkB" href="notizie.html">Notizie</a></li>
-            <li class="contactoF"><a class="linkB" href="contattaci.html">Contatto</a></li>
-            <li class="newsletterF"><a class="linkB" href="https://zc.vg/u1iSr">Iscriviti alla nostra newsletter</a>
-            </li>
-            <li class="atencionF">Assistenza cliente a lunedì al venerdì dalle 9:00 alle 18:00</li>
+            <li class="nosotrosF"><a class="linkB" href="about-us.html">About us</a></li>
+            <li class="noticiasF"><a class="linkB" href="news.html">News</a></li>
+            <li class="contactoF"><a class="linkB" href="contact.html">Contact us</a></li>
+            <li class="newsletterF"><a class="linkB" href="http://zc.vg/LuxLu">Subscribe to our newsletter</a></li>
+            <li class="atencionF">Topciment customer service Monday to Friday from 9:00 to 18:00</li>
             <li class="numFooter">+34 963 92 59 89</li>
             <li class="emailF"> info@topciment.com</li>
           </ul>
@@ -796,11 +791,11 @@
           <small class="direccionF"> © 2020 Grupo Negocios PO,S.L.U. Rosas 33, Manises 46940
             España</small><br class="brF">
           <small class="privaF">
-            <a class="linkB politicaF"
-              href=" https://www.topciment.com/it/termini-condizioni-e-dichiarazione-sulla-privacy.html" rel="nofollow">
-              Termini, condizioni e dichiarazione sulla privacy</a> |
-            <a class="linkB cookieF" href="https://www.topciment.com/it/nota-legale.html" rel="nofollow"
-              class="textoBlanco">Nota Legale</a></small>
+            <a class="linkB politicaF" href=" https://www.topciment.com/en/terms-conditions-and-privacy-statement.html"
+              rel="nofollow">
+              Terms, Conditions & Privacy Statement</a> |
+            <a class="linkB cookieF" href="https://www.topciment.com/en/cookie-policy.html" rel="nofollow"
+              class="textoBlanco">Cookie Policy</a></small>
         </div>
       </div>
     </div>
