--- a/en/proyecto-carmen-house.html
+++ b/en/proyecto-carmen-house.html
@@ -251,123 +251,125 @@
                     alt="Cerrar" /></a></div>
     </div>
 
-
-    <div class="fullscreen background parallax"
-        style="background-image:url('../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (2).jpg');"
-        data-img-width="1500" data-img-height="1000" data-diff="100">
-        <div class="content-a" id="up">
-            <!--<div class="contenedorTexto">
+    <div id="main">
+        <div class="fullscreen background parallax"
+            style="background-image:url('../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (2).jpg');"
+            data-img-width="1500" data-img-height="1000" data-diff="100">
+            <div class="content-a" id="up">
+                <!--<div class="contenedorTexto">
 	  <div class="content-b textoAbajoDerecha wow fadeInLeft">
 			El <strong>microcemento</strong> fino tradicional, de acabado sedoso y agradable al tacto, ha sido concebido para ser utilizado únicamente en paredes y superficies no transitables.
         </div>
     </div> -->
+            </div>
         </div>
-    </div>
-    <div class="contenedorMenuOculto">
-        <div class="contenedorMagenDerecha">
-            <h1 id="suelosDeMicrocementoGaleriaH1" class="wow fadeInLeft" style="width:100%">Carmen House</h1>
-            <h2 id="galeriaH2" class="wow fadeInLeft justificado">Denia, Spain. <br>
+        <div class="contenedorMenuOculto">
+            <div class="contenedorMagenDerecha">
+                <h1 id="suelosDeMicrocementoGaleriaH1" class="wow fadeInLeft" style="width:100%">Carmen House</h1>
+                <h2 id="galeriaH2" class="wow fadeInLeft justificado">Denia, Spain. <br>
 
-                Photos: Mariela Apollonio.</h2>
+                    Photos: Mariela Apollonio.</h2>
 
-            <div class=" fadeInRight justificado" style="float:left; font-size:16px; margin-left:0; margin-top:0;">
-                <p>Located in an incomparable setting in the heart of Les Marines, Denia, Carmen House has become
-                    in one of the most viral works in social networks and a true example of elegance, sophistication and
-                    continuity.
-                    Its architect, Carles Faus, has created a work in which the colour white is the authentic
-                    It acts as a generator and conductor of light. </p>
-                <p>The traceability and linearity created with the white microcement of continuity, unites the pavements
-                    The vertical and horizontal surfaces give the whole house its spaciousness. </p>
-                <p>Topciment products used:</p>
-                <p>-<a href="systems/sttandard-two-component-microcement.html#sttandard-microdeck"
-                        class="links">Sttandard Microdeck</a> in white colour and satin finish:
-                    for floors and
-                    interior wall coverings.<br>
+                <div class=" fadeInRight justificado" style="float:left; font-size:16px; margin-left:0; margin-top:0;">
+                    <p>Located in an incomparable setting in the heart of Les Marines, Denia, Carmen House has become
+                        in one of the most viral works in social networks and a true example of elegance, sophistication
+                        and
+                        continuity.
+                        Its architect, Carles Faus, has created a work in which the colour white is the authentic
+                        It acts as a generator and conductor of light. </p>
+                    <p>The traceability and linearity created with the white microcement of continuity, unites the
+                        pavements
+                        The vertical and horizontal surfaces give the whole house its spaciousness. </p>
+                    <p>Topciment products used:</p>
+                    <p>-<a href="systems/sttandard-two-component-microcement.html#sttandard-microdeck"
+                            class="links">Sttandard Microdeck</a> in white colour and satin finish:
+                        for floors and
+                        interior wall coverings.<br>
 
-                    - <a href="systems/sttandard-two-component-microcement.html#sttandard-microbase"
-                        class="links">Sttandard Microbase</a> white colour and satin finish: for
-                    outdoor flooring.</p>
+                        - <a href="systems/sttandard-two-component-microcement.html#sttandard-microbase"
+                            class="links">Sttandard Microbase</a> white colour and satin finish: for
+                        outdoor flooring.</p>
+                </div>
+
+            </div>
+        </div>
+        <div id="separador50px"></div>
+        <div class="contenedorMenuOculto">
+            <div class="contenedorMagenDerecha">
+
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (2).jpg " class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (3).jpg "
+                            class="img-fluid" style="max-height: 450px;">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (6).jpg"
+                            class="img-fluid" style="max-height: 450px;">
+                    </div>
+                </div>
+                <div style="float:none; clear:both; height:20px;"></div>
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (16).jpg" class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (10).jpg" class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (21).jpg "
+                            class="img-fluid" style="max-height: 450px;">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (23).jpg"
+                            class="img-fluid" style="max-height: 450px;">
+                    </div>
+                </div>
+                <div style="float:none; clear:both; height:20px;"></div>
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (15).jpg" class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (11).jpg" class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (12).jpg "
+                            class="img-fluid" style="max-height: 390px;">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (13).jpg"
+                            class="img-fluid" style="max-height:390px;">
+                    </div>
+                </div>
+                <div style="float:none; clear:both; height:20px;"></div>
+
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (17).jpg" class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (18).jpg "
+                            class="img-fluid" style="max-height: 366px;">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (24).jpg"
+                            class="img-fluid" style="max-height:366px;">
+                    </div>
+                </div>
+                <div style="float:none; clear:both; height:20px;"></div>
+
+                <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (28).jpg" class="img-fluid">
+                <div style="float:none; clear:both; height:20px;"></div>
+
             </div>
 
         </div>
-    </div>
-    <div id="separador50px"></div>
-    <div class="contenedorMenuOculto">
-        <div class="contenedorMagenDerecha">
 
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (2).jpg " class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (3).jpg "
-                        class="img-fluid" style="max-height: 450px;">
-                </div>
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (6).jpg"
-                        class="img-fluid" style="max-height: 450px;">
-                </div>
-            </div>
-            <div style="float:none; clear:both; height:20px;"></div>
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (16).jpg" class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (10).jpg" class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (21).jpg "
-                        class="img-fluid" style="max-height: 450px;">
-                </div>
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (23).jpg"
-                        class="img-fluid" style="max-height: 450px;">
-                </div>
-            </div>
-            <div style="float:none; clear:both; height:20px;"></div>
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (15).jpg" class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (11).jpg" class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (12).jpg "
-                        class="img-fluid" style="max-height: 390px;">
-                </div>
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (13).jpg"
-                        class="img-fluid" style="max-height:390px;">
-                </div>
-            </div>
-            <div style="float:none; clear:both; height:20px;"></div>
-
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (17).jpg" class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-
-
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (18).jpg "
-                        class="img-fluid" style="max-height: 366px;">
-                </div>
-                <div class="col-md-6">
-                    <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (24).jpg"
-                        class="img-fluid" style="max-height:366px;">
-                </div>
-            </div>
-            <div style="float:none; clear:both; height:20px;"></div>
-
-            <img src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (28).jpg" class="img-fluid">
-            <div style="float:none; clear:both; height:20px;"></div>
-
-        </div>
+        <div style="float:none; clear:both; height:20px;"></div>
 
     </div>
-
-    <div style="float:none; clear:both; height:20px;"></div>
-
-
 
     <footer class="footerp">
         <div class="contenedorMenuOculto contenedorF">
