--- a/fr/index.html
+++ b/fr/index.html
@@ -501,16 +501,17 @@
 			</div>
 			<div id="menuocultomovil">
 				<ul>
-					<li><a href="microcement.html" onclick="ocultarmovil()">Microcement</a></li>
-					<!--<li><a href="microcement-colours.html" onclick="ocultarmovil()">Colours</a></li>-->
-					<li><a href="systems.html" onclick="ocultarmovil()">Systems</a></li>
+					<li><a href="information-beton-cire.html" onclick="ocultarmovil()">Béton Ciré</a></li>
+					<!--<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
+					<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html"
+							onclick="ocultarmovil()">Systèmes</a></li>
 					<li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a>
 					</li>
-					<!--<li><a href="guarantee.html" onclick="ocultarmovil()">Guarantee</a></li>-->
-					<li><a href="professionals.html" onclick="ocultarmovil()">Professionals</a></li>
-					<!--<li><a href="dealers.html" onclick="ocultarmovil()">Dealers</a></li>-->
-					<!--<li><a href="about-us.html" onclick="ocultarmovil()">About Us</a></li>-->
-					<li><a href="news.html" onclick="ocultarmovil()">News</a></li>
+					<!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
+					<li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
+					<!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+					<!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
+					<li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
 					<li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 				</ul>
 			</div>
