--- a/it - copia/sistemi/arcocem-microcement-pigments.html
+++ b/it - copia/sistemi/arcocem-microcement-pigments.html
@@ -582,7 +582,7 @@
                                                 src="../../imagenes/Arcocem/icons/versatilidad_aplicacion.png"
                                                 class="figure-img img-fluid rounded" alt="Efectto"></div>
                                         <div class="col-8">
-                                            <strong>Versatility of application
+                                            <strong>Versatilità di applicazione
                                             </strong>
                                             <p>Can be applied with a trowel,
                                                 Brush, brush, sponge,
@@ -768,7 +768,7 @@
                                                 src="../../imagenes/Arcocem/icons/versatilidad_aplicacion.png"
                                                 class="figure-img img-fluid rounded" alt="Efectto"></div>
                                         <div class="col-8">
-                                            <strong>Versatility of application</strong>
+                                            <strong>Versatilità di applicazione</strong>
                                             <p>Can be applied with a trowel,
                                                 brush or paintbrush.</p>
                                         </div>
