--- a/it/efectto.html
+++ b/it/efectto.html
@@ -174,7 +174,7 @@
                     <li><a href="#que-es-efectto">Cosa è Efectto?</a></li>
                     <li><a href="#tipos-de-efectto">Efectto Quartz</a></li>
                     <li><a href="#ventajas">Colori</a></li>
-                    <!--li><a href="#precio">What is the price <br>of microcement?</a></li-->
+                    <!--li><a href="#precio">Che cos'è the price <br>of microcement?</a></li-->
                     <li><a href="#preguntas-frecuentes-ok">Domande Frequenti</a></li>
                 </ul>
             </div>
