--- a/it/informazioni-microcemento.html
+++ b/it/informazioni-microcemento.html
@@ -155,8 +155,8 @@
 
         <div class="menu botones" style="margin-left:100px">
           <ul>
-            <li><a href="informazioni-microcemento.html">Microcemento</a></li>
-            <li><a class="activo" href="sistemi.html">Sistemi</a></li>
+            <li><a class="activo" href="informazioni-microcemento.html">Microcemento</a></li>
+            <li><a href="sistemi.html">Sistemi</a></li>
             <li><a href="galleria.html">Galleria</a></li>
             <li><a href="professionisti.html">Professionisti</a></li>
             <li><a href="notizie.html">Notizie</a></li>
